<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@color/primary"
    tools:context=".ui.myprofile.MyProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primary"
            android:gravity="top"
            android:paddingHorizontal="16dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:padding="10dp"
                android:text="Welcome"
                android:textSize="48sp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Enter Your Details"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Name"
                android:textSize="18sp"
                android:textColor="#b4f0ee"/>

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/light_grey_rounded_background"
                android:hint="First Name"
                android:textSize="16sp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Last Name"
                android:textSize="18sp"
                android:textColor="#b4f0ee"/>

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/light_grey_rounded_background"
                android:hint="Last Name"
                android:textSize="16sp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Email"
                android:textSize="18sp"
                android:textColor="#b4f0ee"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/light_grey_rounded_background"
                android:hint="Email"
                android:textSize="16sp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Phone Number (optional)"
                android:textSize="18sp"
                android:textColor="#b4f0ee"/>

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/light_grey_rounded_background"
                android:hint="Phone Number"
                android:inputType="phone"
                android:textSize="16sp"
                android:padding="8dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/login_user_type_button_selected"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"/>

</FrameLayout>
